[package]
name = "os-console"
version = "0.1.0"
edition = "2021"
description = "os-console — keyboard-native terminal interface for the Totebox Archive"

[[bin]]
name = "os-console"
path = "src/main.rs"

[dependencies]
app-console-keys = { path = "../app-console-keys" }
app-console-content = { path = "../app-console-content" }
app-console-input = { path = "../app-console-input" }
app-console-system = { path = "../app-console-system" }
app-console-email = { path = "../app-console-email" }
app-console-slm = { path = "../app-console-slm" }
app-console-people = { path = "../app-console-people" }
app-console-search = { path = "../app-console-search" }
system-gateway-mba = { path = "../system-gateway-mba" }
anyhow = "1"
ctrlc = "3"
tokio = { version = "1", features = ["full"] }
russh = { version = "0.60" }
