[package]
name = "os-infrastructure"
version = "0.1.0"
edition = "2024"
authors = ["PointSav Digital Systems AG"]
description = "Silicon-Pinned ISO for Node 1 (Muscle) - P8600 / BCM4322"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true

[dependencies]
# Linking the Tier 6 dependency to the Tier 4 product
system-network-interface = { path = "../system-network-interface" }
