[package]
name = "service-content"
version = "0.1.0"
edition = "2021"
description = "Tier-5 Asset & Knowledge Synthesis Engine (Stateless RAG Pipeline)"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
csv = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
