[package]
name = "service-content"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lbug = "0.16"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
strsim = "0.11"
ed25519-dalek = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[features]
# Optional embedding-based entity resolution (bge-small-en-v1.5 via fastembed, CPU).
# Off by default so the standard build never depends on onnxruntime; the fastembed
# dependency is wired during the operator-validated activation step.
embeddings = []
